--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+ .cards {
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 16px; 
+ }
