--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,7 +1,26 @@
-<%= simple_form_for(restaurant) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :phone_number %>
-  <%= f.input :category, collection: ["chinese", "italian", "japanese", "french", "belgian"] %>
-  <%= f.submit %>
-<% end %>
+<div class="container my-5">
+  <div class="card shadow-sm">
+    <div class="card-header bg-primary text-white">
+      <h3 class="mb-0">Add a New Restaurant</h3>
+    </div>
+    <div class="card-body">
+      <%= simple_form_for(restaurant) do |f| %>
+        <div class="mb-3">
+          <%= f.input :name, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
+        </div>
+        <div class="mb-3">
+          <%= f.input :address, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
+        </div>
+        <div class="mb-3">
+          <%= f.input :phone_number, input_html: { class: 'form-control' }, label_html: { class: 'form-label' } %>
+        </div>
+        <div class="mb-3">
+          <%= f.input :category, collection: ["chinese", "italian", "japanese", "french", "belgian"], input_html: { class: 'form-select' }, label_html: { class: 'form-label' } %>
+        </div>
+        <div class="d-grid">
+          <%= f.submit "Create Restaurant", class: "btn btn-primary btn-lg" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
