--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,22 +1,30 @@
-<div class="container">
-    <div class="cards">
-<% @restaurants.each do |restaurant| %>
-    <div class="card" style="width: 18rem;">
-    <div class="card-body">
-    <h5 class="card-title"><%= restaurant.name %></h5>
-    <h6 class="card-subtitle mb-2 text-body-secondary"><%= restaurant.category %></h6>
-    <p class="card-text"><%= restaurant.address %></p>
-    <a href="#" class="card-link"><%= link_to "Show this restaurant", restaurant %>
-</a>
+<div class="container my-5">
+  <div class="text-center mb-4">
+    <h1 class="display-6">Explore Our Restaurants</h1>
   </div>
-</div>
-<% end %>
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-    <h5 class="card-title">Something not on the list ?</h5>
-    <%= link_to "Create new", new_restaurant_path, class: "btn btn-primary"%>
-    
-</div>
-</div>
-</div>
+
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+    <% @restaurants.each do |restaurant| %>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title"><%= restaurant.name %></h5>
+            <h6 class="card-subtitle mb-2 text-muted"><%= restaurant.category %></h6>
+            <p class="card-text"><%= restaurant.address %></p>
+            <%= link_to "Show this restaurant", restaurant, class: "btn btn-outline-primary" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+
+    <!-- Carte pour ajouter un nouveau restaurant -->
+    <div class="col">
+      <div class="card h-100 shadow-sm border-primary">
+        <div class="card-body d-flex flex-column justify-content-center text-center">
+          <h5 class="card-title">Something not on the list?</h5>
+          <%= link_to "Create new", new_restaurant_path, class: "btn btn-primary mt-3" %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
